Added route package and added route for Home & AddParticipant pages

--- a/client/main.html
+++ b/client/main.html
@@ -6,10 +6,6 @@
 <body>
     {{> header}}
 
-    <div id="container">
-        <!--participantsList-->
-        <!--addParticipant-->
-        {{> participantsList}}
-    </div>
+    {{> mainLayout}}
 </body>
 
