--- a/client/pages/fixtureNscores.html
+++ b/client/pages/fixtureNscores.html
@@ -4,4 +4,7 @@
             {{> fixtureNScoresItem}}
         {{/each}}
     </div>
+    <div class="clearfix">
+        <button id="startSemisAndFinals" type="button" class="btn btn-primary pull-right">Start semis and finals</button>
+    </div>
 </template>
