Created navigation to participants list page from add participant page

--- a/client/pages/addParticipant.html
+++ b/client/pages/addParticipant.html
@@ -1,4 +1,9 @@
 <template name="addParticipant">
+    <div class="clearfix">
+        <button type="button" class="goToParticipantsListPageLink btn btn-link">
+            &lt; Go to participants list page
+        </button>
+    </div>
     <form>
         <div class="form-group">
             <label for="name">Name</label>
