Changed make fixture button to go to fixtures and scores page

--- a/client/pages/participantsList.html
+++ b/client/pages/participantsList.html
@@ -24,7 +24,9 @@
             </table>
         </div>
         <div class="clearfix">
-            <button id="makeFixture" type="button" class="btn btn-primary pull-right">Make fixture</button>
+            <button type="button" class="goToFixturesNScoresPageLink btn btn-link pull-right">
+                Go to fixtures and scores page &gt;
+            </button>
         </div>
     </div>
 </template>
