--- a/client/pages/semisAndFinals.html
+++ b/client/pages/semisAndFinals.html
@@ -1,15 +1,24 @@
 <template name="semisAndFinals">
     <div>
-        <div>
-            <h2>Semi Final - 01</h2>
-
+        <div class="clearfix">
+            <button type="button" class="goToFixturesNScoresPageLink btn btn-link">
+                &lt; Go to fixtures and scores page
+            </button>
+            <button id="makeSemisFixture" type="button" class="btn btn-primary pull-right">
+                Make semi-finals fixture
+            </button>
         </div>
         <div>
-            Semi Final - 02
+            <h3 class="heading">Semi Finals</h3>
+            {{#each getSemiFinalsTeams}}
+                {{> fixtureNScoresItem}}
+            {{/each}}
         </div>
         <div>
-            Finals
-            
+            <h3 class="heading">Final</h3>
+            {{#each getFinalsTeam}}
+                {{> fixtureNScoresItem}}
+            {{/each}}
         </div>
     </div>
 </template>
