--- a/client/pages/participantsList.html
+++ b/client/pages/participantsList.html
@@ -10,6 +10,7 @@
                     <th>Nickname</th>
                     <th>Name</th>
                     <th>Email</th>
+                    <th>Score</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -18,6 +19,7 @@
                         <th>{{nickname}}</th>
                         <td>{{name}}</td>
                         <td>{{emailAddress}}</td>
+                        <td>{{score}}</td>
                     </tr>
                 {{/each}}
                 </tbody>
