--- a/client/pages/addParticipant.html
+++ b/client/pages/addParticipant.html
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
             <label for="nickname">Nickname</label>
-            <input type="email" class="form-control" id="nickname" placeholder="enter nickname">
+            <input type="text" class="form-control" id="nickname" placeholder="enter nickname">
         </div>
         <div class="form-group">
             <label for="emailAddress">Email address</label>
